# liberty-dev

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.saver  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/api/catalog/: __init__.py  models.py  router.py
apps/api/common/: __init__.py  cache.py  db.py  decorators.py  settings.py
apps/saver/: __init__.py  main.py
apps/saver/consumers/: scraper_consumer.py
apps/saver/domain/normalize/: __init__.py  product_normalizer.py
apps/saver/domain/repository/: __init__.py  product_repository.py
apps/saver/domain/s3/: __init__.py  s3_service.py
apps/scraper/scraper_core/: __init__.py  async_http_client.py  base_scraper.py  config.py  exceptions.py  logger.py  models.py  mouse_movement_generator.py  storage.py  utils.py
apps/scraper/scrapers/farfetch/: README.md  __init__.py  config.py  domain.py  example.py  html_parser.py  json_parser.py  scraper.py
apps/scrapers/: __init__.py
apps/scrapers/farfetch/: __init__.py
apps/scrapers/goat/: __init__.py
apps/scrapers/stockx/: __init__.py
infra/grafana/dashboards/: aggregator-dashboard.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py
shared/: __init__.py
shared/events/: __init__.py  product_events.py  scraper_events.py
shared/schemas/: __init__.py  product.py  scraper_data.py
shared/utils/: __init__.py  logging.py  metrics.py  retry.py
tests/: conftest.py  test_api.py  test_farfetch_scraper.py  test_layout.py  test_shared.py
